# swayipc-cpp

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  meson.build
cmake/: swayipc_cppConfig.cmake.in
example/: CMakeLists.txt  connecting.cpp  event_handling.cpp
examples/: connecting.cpp  event_handling.cpp
include/: assert.hpp  client.hpp  connection.hpp  container.hpp  event_stream.hpp  json.hpp  message.hpp  safequeue.hpp  serialization.hpp  socket_wrapper.hpp  sway_socket.hpp  tree.hpp
src/: client.cpp  connection.cpp  container.cpp  socket_wrapper.cpp  sway_socket.cpp  tree.cpp
swayipc-cpp/include/swayipc-cpp/: client.hpp  container.hpp  data.hpp  event_stream.hpp  json.hpp  message.hpp  safequeue.hpp  socket_wrapper.hpp  sway_socket.hpp
swayipc-cpp/src/: CMakeLists.txt  client.cpp  container.cpp  data.cpp  json-macro.hpp  message.cpp  socket_wrapper.cpp  sway_socket.cpp
